k8s&docker/yaml/middle.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: autodetect
  namespace: prod
spec:
  contentType:
    autoDetect: false
